# dj-blacksmith

./: .editorconfig  .gitignore  CHANGELOG.rst  CONTRIBUTORS.txt  Justfile  LICENSE  README.rst  pyproject.toml  pytest.ini
.github/workflows/: main.yml  tests-artifacts.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/user/: api.rst  configuration.rst  introduction.rst  middleware_factories.rst  middlewares.rst  usage.rst
examples/django_async/notif/: Dockerfile  pyproject.toml
examples/django_async/notif/src/notif/: asgi.py  entrypoint.py  settings.py  urls.py  views.py
examples/django_sync/notif/: Dockerfile  gunicorn.conf.py   pyproject.toml
examples/django_sync/notif/src/: manage.py
examples/django_sync/notif/src/notif/: settings.py  urls.py  views.py  wsgi.py
examples/django_sync/notif/tests/: test_notif.py
scripts/: gen_unasync.py  get_version.py  show_release.py  write_changelog.py
src/dj_blacksmith/: __init__.py  _settings.py  apps.py
src/dj_blacksmith/client/: metrics.py
src/dj_blacksmith/client/_async/: client.py  middleware.py  middleware_factory.py
src/dj_blacksmith/client/_sync/: client.py  middleware.py  middleware_factory.py
tests/: test_dj_blacksmith.py
tests/testapp/resources/: dummy.py
tests/testapp/settings/: __init__.py  base.py
tests/unittests/: __init__.py  conftest.py  fixtures.py  test_dj_blacksmith.py  test_settings.py
tests/unittests/_async/: test_client.py  test_middleware.py  test_middleware_factories.py
tests/unittests/_sync/: test_client.py  test_middleware.py  test_middleware_factories.py
tests/unittests/testapp/resources/: dummy.py
tests/unittests/testapp/settings/: __init__.py  base.py
