[tool.poetry]
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
]
description = "Django Bindings for Blacksmith"
homepage = "https://github.com/mardiros/dj-blacksmith"
name = "dj-blacksmith"
readme = "README.rst"
repository = "https://github.com/mardiros/dj-blacksmith"
version = "0.2.0"

[tool.poetry.dependencies]
Django = ">=3.2, <=5"
aioredis = "^2.0.1"
blacksmith = {version = "^0.13.3", extras = ["prometheus"]}
python = "^3.7"
redis = "^4.1.2"
types-setuptools = "^57.4.7"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.2"
black = "^22.1.0"
django-stubs = "^1.9.0"
esbonio = "^0.8.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
sphinx-rtd-theme = "^1.0.0"
tomlkit = "^0.9.0"
unasync = "^0.5.0"

[tool.pytest.ini_options]
norecursedirs = "docs"

[tool.pyright]
include = ["src"]
# reportPrivateUsage = false
# reportUnknownMemberType = false
# reportUnknownParameterType = false
# reportUnknownVariableType = false
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "except ImportError:",
  "except pkg_resources.DistributionNotFound:",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
